<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.develogical</groupId>
    <version>1.0-SNAPSHOT</version>
    <artifactId>SkeletonWebApp</artifactId>
    <dependencies>

        <dependency>
            <groupId>ca.umontreal.iro.simul</groupId>
            <artifactId>ssj</artifactId>
            <scope>compile</scope>
            <version>3.3.0</version>
        </dependency>

        <dependency>
            <groupId>org.jmock</groupId>
            <artifactId>jmock</artifactId>
            <version>2.12.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/libs/jmock-2.12.0.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.jmock</groupId>
            <artifactId>jmock-testjar</artifactId>
            <version>2.12.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/libs/jmock-2.12.0-tests.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.jmock</groupId>
            <artifactId>jmock-junit4</artifactId>
            <version>2.12.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/libs/jmock-junit4-2.12.0.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.jmock</groupId>
            <artifactId>virt-jmock</artifactId>
            <version>2.12.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/libs/virt-jmock-2.12.0.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlet</artifactId>
            <version>9.4.12.v20180830</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.mashape.unirest</groupId>
            <artifactId>unirest-java</artifactId>
            <version>1.4.9</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.1.1</version>
                <configuration>
                    <assembleDirectory>target</assembleDirectory>
                    <programs>
                        <program>
                            <mainClass>com.develogical.WebServer</mainClass>
                            <name>skeletonwebapp</name>
                        </program>
                    </programs>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>